# Stockfish

./: .gitignore  .gitmodules  .restyled.yaml  CHANGELOG.md  LICENSE  README.md  architecture.md  pubspec.yaml
.github/workflows/: example.yml  integration_tests.yml  pipeline.yml
android/: CMakeLists.txt  CMakeLists.txt-e  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/stockfish/: StockfishPlugin.java
android/src/main/kotlin/com/stockfish/: StockfishPlugin.kt
example/: .metadata  README.md  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/stockfish_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/stockfish_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/integration_test/: app_test.dart  execute.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/: output_widget.dart
example/test/: widget_test.dart
ios/: stockfish.podspec  stockfish.podspec-e
ios/Classes/: StockfishPlugin.h  StockfishPlugin.m  StockfishPlugin.mm  SwiftStockfishPlugin.swift
ios/FlutterStockfish/: ffi.cpp  ffi.h
ios/Stockfish/src/: benchmark.cpp  bitbase.cpp  bitboard.cpp  bitboard.h  endgame.cpp  endgame.h  evaluate.cpp  evaluate.h  main.cpp  material.cpp  material.h  misc.cpp  misc.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  pawns.cpp  pawns.h  position.cpp  position.h  psqt.cpp  psqt.h  search.cpp  search.h  thread.cpp  thread.h  thread_win32_osx.h  timeman.cpp  timeman.h  tt.cpp  tt.h  tune.cpp  tune.h  types.h  uci.cpp  uci.h  ucioption.cpp
ios/Stockfish/src/nnue/: evaluate_nnue.cpp  evaluate_nnue.h  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h
ios/Stockfish/src/nnue/features/: half_ka_v2.cpp  half_ka_v2.h
ios/Stockfish/src/nnue/layers/: affine_transform.h  clipped_relu.h  input_slice.h
ios/Stockfish/src/syzygy/: tbprobe.cpp  tbprobe.h
lib/: stockfish.dart
lib/src/: ffi.dart  stockfish.dart  stockfish_state.dart
test/: stockfish_test.dart
